@startuml

title Composite

abstract class Company{
    -name: String
    +add()
    +remove()
    +display()
    +lineOfDuty()
}
class FinanceCompany{
    +add()
    +remove()
    +display()
    +lineOfDuty()
}
class HRCompany{
    +add()
    +remove()
    +display()
    +lineOfDuty()
}
class ConcreteCompany{
    +add()
    +remove()
    +display()
    +lineOfDuty()
}

Company <|-- FinanceCompany
Company <|-- HRCompany
Company <|-- ConcreteCompany

Company <--o ConcreteCompany
@enduml